--- a/alura-docker-cap06/docker-compose.yml
+++ b/alura-docker-cap06/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     build: 
       dockerfile: ./docker/alura-books.dockerfile
       context: .
-    image: jeielml/alura-books
+    image: redu/alura-books
     container_name: alura-books-1
     ports:
       - 3000
@@ -38,7 +38,7 @@ services:
     build: 
       dockerfile: ./docker/alura-books.dockerfile
       context: .
-    image: jeielml/alura-books
+    image: redu/alura-books
     container_name: alura-books-2
     ports:
       - 3000
@@ -51,7 +51,7 @@ services:
     build: 
       dockerfile: ./docker/alura-books.dockerfile
       context: .
-    image: jeielml/alura-books
+    image: redu/alura-books
     container_name: alura-books-3
     ports:
       - 3000
