--- a/ecommerce/pom.xml
+++ b/ecommerce/pom.xml
@@ -6,7 +6,15 @@
 
     <groupId>org.example</groupId>
     <artifactId>ecommerce</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>service-email</module>
+        <module>service-fraudDetector</module>
+        <module>service-log</module>
+        <module>service-newOrder</module>
+        <module>common-kafka</module>
+    </modules>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients -->
         <dependency>
